--- a/components/t41v96tk4-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/t41v96tk4-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: t41v96tk4-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-6cd14560e9.bg73.p3.openshiftapps.com/rhtap/rhtap-qe:2e217f1f440978d8eba6d26f77e82b0c7b8fdf80@sha256:245421fe7231e246ae4423b8568eec98a803ce96771f4062a3d1b1cf8f823141
+          name: container-image
